        * add facet support

0.06    23 May 2010
        * add 'engine' to Response
        * add client tests with WWW::OpenSearch

0.07    22 June 2010
        * refactor base classes to move most functionality into the Engine,
          and added 'r' option to not return results (for facets only, e.g.).
        * stringify() Response classes should always return UTF-8 octets (bytes) 
          not characters. This should ensure no "wide character" warnings when
          printing and will work with S::OS::Server::Plack, which requires bytes.
        * add default_boolop support with 'b' param
        * add parsed_query to Response

0.08    26 June 2010
        * add missing 'order' param to default Searcher params
        * add 'parser_config' to Engine

0.09    25 July 2010
        * fix bug and clarify docs w.r.t 'c', 'f' and 'r' params to Engine->search()
        * add "query_json" object to Response

0.10    30 Nov 2010
        * pass original args to Engine->search() through to build_results() and build_facets().
          This (in theory) should make it easier for subclasses to extend the functionality
          of search() without needing to override it.

0.11    07 Jan 2011
        * add has_rest_api feature to base Engine class.
        * add debug attribute to Engine class.

0.12    14 Jan 2011
        * add Response->add_attribute feature

0.13    19 June 2011
        * logger dependent on debug==true

0.14    26 Sept 2011
        * create UUID string instead of binary in XML response format 
        * default hiliter config now uses tag <b class="h"> instead of <span style="...">
        * add init_default_response_format to base Engine class.

0.15    22 Oct 2011
        * add 't' param, deprecating 'format'
        * add 'u' param, deprecating 'link'
        * add searcher_config and indexer_config and flesh out new() pod.

0.16    xxx
        * add missing dependency on Data::UUID
        * add content_type() get method on Response subclasses